plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
//    archivesName = mod_id
	version = "${minecraft_version}-fabric-${mod_version}"
	group = "${maven_group}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
	archivesName = mod_name_s
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	flatDir {
		dirs("libs")
	}
	flatDir {
		dirs("zlib")
	}
	maven {
		url "https://cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
		content {
			includeGroup "maven.modrinth"
		}
	}

//	maven {
//		name = 'Ladysnake Mods'
//		url = 'https://maven.ladysnake.org/releases'
//	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"ecliptic-seasons" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}


	accessWidenerPath = file("src/main/resources/${mod_id}-fabric.accesswidener")

}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	runtimeOnly "curse.maven:particle-rain-421897:8055423"
//	runtimeOnly "maven.modrinth:replaymod:26.1-2.6.27"
	runtimeOnly "maven.modrinth:flashback:0.42.1"

	// Voxy 0.2.14-alpha compatibility profile
//	implementation "maven.modrinth:voxy:0.2.14-alpha"
//	implementation "maven.modrinth:sodium:mc26.1.1-0.8.9-fabric"
//	implementation "maven.modrinth:iris:1.10.9+26.1-fabric"

	implementation "maven.modrinth:voxy:Zt3LPI0b"
	implementation "maven.modrinth:sodium:mc26.1.2-0.9.1-fabric"
	implementation "maven.modrinth:iris:1.11.2+26.1-fabric"

	implementation "maven.modrinth:continuity:3.0.1-beta.2+26.1"

	implementation "curse.maven:jade-324717:7886518"

	// https://mvnrepository.com/artifact/org.projectlombok/lombok
	compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'

	implementation "curse.maven:forge-config-api-port-547434:7861252"
	implementation "curse.maven:modmenu-308702:7813924"
	compileOnly "curse.maven:configured-457570:7943179"
//	implementation "curse.maven:cardinal-components-api-318449:7909405"

	compileOnly "maven.modrinth:distanthorizons:3.2.0-b-26.1.2"
//	runtimeOnly "maven.modrinth:distanthorizons:3.2.0-b-26.1.2"


//	def cca_version = "8.0.0"
//
//	implementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${cca_version}"
//	include "org.ladysnake.cardinal-components-api:cardinal-components-base:${cca_version}"

//	implementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cca_version}"
//	include "org.ladysnake.cardinal-components-api:cardinal-components-entity:${cca_version}"

//	implementation "org.ladysnake.cardinal-components-api:cardinal-components-chunk:${cca_version}"
//	include "org.ladysnake.cardinal-components-api:cardinal-components-chunk:${cca_version}"

	compileOnly "com.electronwill.night-config:core:3.8.3"
	compileOnly("com.electronwill.night-config:toml:3.8.3")

	implementation(include("org.apache.maven:maven-artifact:3.9.9"))

//	implementation "org.ladysnake.cardinal-components-api:cardinal-components-world:${cca_version}"
//	include "org.ladysnake.cardinal-components-api:cardinal-components-world:${cca_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "projectName", project.name

	from("LICENSE") {
		rename { "${it}_${project.name}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-Xmaxerrs" << "10000"

	options.encoding = 'UTF-8'
}